--- a/PanArctic_DSL_figures.Rmd
+++ b/PanArctic_DSL_figures.Rmd
@@ -5,6 +5,7 @@ date: "`r format(Sys.time(), '%Y/%m/%d at %H:%M')`"
 output: 
   html_document:
     keep_md: yes
+    code_folding: hide
   github_document:
     always_allow_html: true
 ---
@@ -52,12 +53,21 @@ options(dplyr.summarise.inform = F) # Suppress summarise() warning
 ```{r data-loading, message=FALSE}
 # Map projection
 arctic_latlon <- raster(extent(-155, 35, 66, 85), crs = "EPSG:4326")
+
+# Laea projection for bathy and all other files
+cell_res <- 150 # Cell resolution in km
+arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") 
+projection(arctic_laea) <- gsub("units=m", "units=km", # Convert from m to km
+                                projection(arctic_laea)) 
+res(arctic_laea) <- c(cell_res, cell_res) # Define cell resolution
+
 # Coastline shapefiles
 coast_10m_latlon <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% 
   spTransform(CRSobj = crs(arctic_latlon)) %>% # Verify shapefile proj.
   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
   fortify() %>% # Convert to a dataframe for ggplot
   rename(lon = long)
+
 # Bathy data
 bathy_df <- getNOAA.ice.bathy(lon1 = -180, lon2 = 180, lat1 = 50, lat2 = 90,
                               resolution = 2, keep = T, path = "data/bathy/") %>%
@@ -76,8 +86,8 @@ area_SV_latlon <- data.frame(lon = c(46, 46, 0, 0, 46),
 
 # Acoustic data
 load("data/acoustics/MVBS_2015_2017.RData")
-load("data/acoustics/SA_grids.RData")
-load("data/acoustics/Sv_grids.RData")
+load(paste0("data/acoustics/SA_grids_", cell_res, "km.RData")) 
+load(paste0("data/acoustics/Sv_grids_", cell_res, "km.RData")) 
 MVBS_latlon <- MVBS %>% # Location of acoustic data
   mutate(lat = round(lat, 1),
          lon = round(lon, 1)) %>%
@@ -87,31 +97,26 @@ MVBS_latlon <- MVBS %>% # Location of acoustic data
   ungroup() 
 
 # CTD data
-load("data/CTD/CTD_2015_2019.RData")
-load("data/CTD/CTD_grids.RData")
+# load("data/CTD/CTD_2015_2019.RData")
+# load("data/CTD/CTD_grids.RData")
 
 # Trawl data
 load("data/nets/trawl_mwt_2015_2017.RData")
 trawl_latlon <- trawl_station %>% # Location of trawls
   group_by(date) %>%
   summarise(lat = mean(lat),
-            lon = mean(lon))
+            lon = mean(lon),
+            year = year(date))
 
 # Remote sensing data
-load("data/remote_sensing/remote_sensing_chl.RData")
-load("data/remote_sensing/seaice_grids.RData")
+load(paste0("data/remote_sensing/physics_grids_", cell_res, "km.RData"))
+load(paste0("data/remote_sensing/chl_grids_", cell_res, "km.RData"))
 ```
 
 I re-project data from the WGS84 projection to the EASE-Grid 2.0 North projection.
 
 ```{r data-laea-projection, cache=TRUE}
-# Laea projection for bathy and all other files
-cell_res <- 50 # Cell resolution in km
-arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") 
-projection(arctic_laea) <- gsub("units=m", "units=km", # Convert from m to km
-                                projection(arctic_laea)) 
-res(arctic_laea) <- c(cell_res, cell_res) # Define cell resolution
-
+# Bahty projection: EPSG:6931 with a 5 x 5 km cell resolution
 proj_bathy_laea <- raster(extent(-2700, 2700, -2700, 2700), 
                           crs = "EPSG:6931", res = c(5, 5)) # Seaice projection
 projection(proj_bathy_laea) <- gsub("units=m", "units=km", # Convert from m to km
@@ -148,20 +153,6 @@ coast_10m_laea <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>%
   spTransform(CRSobj = crs(arctic_laea)) %>% # Project shapefile in laea
   fortify() %>% # Convert to a dataframe for ggplot
   rename(xc = long, yc = lat)
-
-# Location of trawls
-trawl_laea <- SpatialPoints(cbind(trawl_latlon$lon, trawl_latlon$lat), 
-                            proj4string = CRS("EPSG:4326")) %>%
-  spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
-  as.data.frame() %>%
-  rename(xc = coords.x1, yc = coords.x2)
-
-# Location of acoustic data
-MVBS_laea <- SpatialPoints(cbind(MVBS_latlon$lon, MVBS_latlon$lat), 
-                           proj4string = CRS("EPSG:4326")) %>%
-  spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
-  as.data.frame() %>%
-  rename(xc = coords.x1, yc = coords.x2) # Rename variables
 
 # Arctic circle and areas of interest
 arctic_circle_laea <- SpatialPoints(cbind(arctic_circle_latlon$lon,
@@ -235,6 +226,31 @@ IHO_sf_latlon <- dir_ls("data/arctic_regions/", glob = "*.shp") %>%
   st_as_sf() %>%
   st_transform(crs = crs(arctic_latlon)) %>%
   st_make_valid()
+
+# Location of trawls
+trawl_laea <- SpatialPointsDataFrame(
+  SpatialPoints(cbind(trawl_latlon$lon, trawl_latlon$lat), 
+                proj4string = CRS("EPSG:4326")),
+  data.frame(year = trawl_latlon$year, 
+             lat = trawl_latlon$lat,
+             lon = trawl_latlon$lon)) %>%
+  spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
+  as.data.frame() %>%
+  st_as_sf(coords = c("lon", "lat"), crs = st_crs(arctic_latlon), remove = F) %>%
+  st_join(., IHO_sf_latlon, join = st_within) %>% # Append IHO region
+  st_drop_geometry() %>%
+  mutate(name = if_else(name == "The Northwestern Passages" & coords.x2 < 0, "Baffin Bay",
+                if_else(name == "Arctic Ocean" & name_3 == "West Arctic Ocean", "West Arctic Ocean",
+                if_else(name == "Arctic Ocean" & name_3 == "East Arctic Ocean", "East Arctic Ocean", name)))) %>%
+  rename(xc = coords.x1, yc = coords.x2, IHO_area = name) %>%
+  dplyr::select(year, IHO_area, lat, lon, xc, yc)
+
+# Location of acoustic data
+MVBS_laea <- SpatialPoints(cbind(MVBS_latlon$lon, MVBS_latlon$lat), 
+                           proj4string = CRS("EPSG:4326")) %>%
+  spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
+  as.data.frame() %>%
+  rename(xc = coords.x1, yc = coords.x2) # Rename variables
 ```
 
 # Summary statistics
@@ -763,10 +779,12 @@ ggsave("plots/Fig3_map_pointrange_NASC.png", p_map_pointrange_NASC,
 p_map_pointrange_NASC
 ```
 
-## Table 1. Abundance mesopelagic fish
+## Map/table 1. Abundance mesopelagic fish and map
 
-```{r table1-heatmap-abundance}
-trawl_area <- trawl %>%
+I prepare the datasets for the table (relative abundance per area) and the map (relative abundance per station).
+
+```{r relative-abundance-area}
+trawl_area_df <- trawl %>%
   # Find IHO area for each trawl deployment
   st_as_sf(coords = c("lon", "lat"), crs = st_crs(arctic_latlon), remove = F) %>%
   st_join(., IHO_sf_latlon, join = st_within) %>% # Append IHO region
@@ -822,15 +840,104 @@ trawl_area <- trawl %>%
                                           "Myctophidae",
                                           "Liparidae",
                                           "Boreogadus saida")),
-         color_text = if_else(RA >= 40, "white", "black")) %>%
-  # Plot
+         color_text = if_else(RA >= 40, "white", "black")) 
+```
+
+```{r realtive-abundance-station}
+trawl_station_df <- trawl %>%
+  # Find IHO area for each trawl deployment
+  st_as_sf(coords = c("lon", "lat"), crs = st_crs(arctic_latlon), remove = F) %>%
+  st_join(., IHO_sf_latlon, join = st_within) %>% # Append IHO region
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry() %>%
+  mutate(name = if_else(name == "The Northwestern Passages" & lon > -90, "Baffin Bay",
+                if_else(name == "Arctic Ocean" & name_3 == "West Arctic Ocean", "West Arctic Ocean",
+                if_else(name == "Arctic Ocean" & name_3 == "East Arctic Ocean", "East Arctic Ocean", name))),
+         IHO_area = case_when(name == "East Arctic Ocean" ~ "EAO",
+                              name == "West Arctic Ocean" ~ "WAO",
+                              name == "Beaufort Sea" ~ "BF",
+                              name == "The Northwestern Passages" ~ "CAA",
+                              name == "Baffin Bay" ~ "BB",
+                              name == "Davis Strait" ~ "DS"),
+         fish_species2 = case_when(fish_species == "boreogadus_saida" ~ "Arctic cod",
+                                   fish_species == "liparidae" ~ "Snailfish",
+                                   fish_species == "myctophidae" ~ "Lanternfish",
+                                   fish_species == "sebastes_sp" ~ "Redfish",
+                                   !fish_species %in% c("boreogadus_saida", "liparidae", "myctophidae", "sebastes_sp") ~ "Other")) %>%
+  dplyr::select(-name, -fname, -id, -longitude, -latitude, -min_x, -min_y,
+                -max_x, -max_y, -area.y, -mrgid, -bearings, -name_1, -mrgid_1, 
+                -name_2,-mrgid_2, -name_3, -mrgid_3) %>%
+  # Calculate number of individual for each species per station
+  group_by(year, date, IHO_area, station, deployment, lat, lon, xc, yc, fish_species2) %>% 
+  summarise(number_fish = sum(number_fish)) %>%
+  ungroup() %>%
+  # Calculate total number of fish per IHO region
+  group_by(year, date, IHO_area, station, deployment, lat, lon, xc, yc) %>% 
+  mutate(total_fish = sum(number_fish)) %>% 
+  ungroup() %>%
+  # Calculate relative abundance per station
+  mutate(RA = (number_fish / total_fish) * 100) %>%
+  dplyr::select(year, IHO_area, xc, yc, RA, fish_species2) %>% 
+  pivot_wider(names_from = fish_species2, values_from = RA, values_fill = 0) %>%
+  # Jitter coordinates to avoid overplotting
+  mutate(row = seq(1, 18, 1),
+         xc_jit = case_when(xc == xc[1] & yc == yc[1] ~ xc[1] - 50,
+                            xc == xc[2] & yc == yc[2] ~ xc[2],
+                            xc == xc[3] & yc == yc[3] ~ xc[3] - 50,
+                            xc == xc[4] & yc == yc[4] ~ xc[4],
+                            xc == xc[5] & yc == yc[5] ~ xc[5] + 25,
+                            xc == xc[6] & yc == yc[6] ~ xc[6] + 25,
+                            xc == xc[7] & yc == yc[7] ~ xc[7] + 25,
+                            xc == xc[8] & yc == yc[8] ~ xc[8] - 50,
+                            xc == xc[9] & yc == yc[9] ~ xc[9],
+                            xc == xc[10] & yc == yc[10] ~ xc[10],
+                            xc == xc[11] & yc == yc[11] ~ xc[11] + 150,
+                            xc == xc[12] & yc == yc[12] ~ xc[12],
+                            xc == xc[13] & yc == yc[13] ~ xc[13] - 150,
+                            xc == xc[14] & yc == yc[14] ~ xc[14] + 25,
+                            xc == xc[15] & yc == yc[15] ~ xc[15],
+                            xc == xc[16] & yc == yc[16] ~ xc[16] + 75,
+                            xc == xc[17] & yc == yc[17] ~ xc[17],
+                            xc == xc[18] & yc == yc[18] ~ xc[18]),
+         yc_jit = case_when(xc == xc[1] & yc == yc[1] ~ yc[1] - 75,
+                            xc == xc[2] & yc == yc[2] ~ yc[2] + 25,
+                            xc == xc[3] & yc == yc[3] ~ yc[3],
+                            xc == xc[4] & yc == yc[4] ~ yc[4] - 100,
+                            xc == xc[5] & yc == yc[5] ~ yc[5] - 75,
+                            xc == xc[6] & yc == yc[6] ~ yc[6],
+                            xc == xc[7] & yc == yc[7] ~ yc[7],
+                            xc == xc[8] & yc == yc[8] ~ yc[8] - 100,
+                            xc == xc[9] & yc == yc[9] ~ yc[9],
+                            xc == xc[10] & yc == yc[10] ~ yc[10] + 75,
+                            xc == xc[11] & yc == yc[11] ~ yc[11] + 50,
+                            xc == xc[12] & yc == yc[12] ~ yc[12],
+                            xc == xc[13] & yc == yc[13] ~ yc[13] - 50,
+                            xc == xc[14] & yc == yc[14] ~ yc[14] + 50,
+                            xc == xc[15] & yc == yc[15] ~ yc[15],
+                            xc == xc[16] & yc == yc[16] ~ yc[16] - 100,
+                            xc == xc[17] & yc == yc[17] ~ yc[17],
+                            xc == xc[18] & yc == yc[18] ~ yc[18] - 50))
+```
+
+Plot the the heatmap and map together. 
+
+```{r heatmap-map-trawl}
+# Heatmap
+heatmap_RA <- trawl_area_df %>%
   ggplot() +
   geom_tile(aes(x = IHO_area, y = fish_species, fill = RA),
             color = "white", lwd = 0.6) +
   geom_text(aes(x = IHO_area, y = fish_species, 
                 label = sprintf("%0.1f", round(RA, 1)),
                 color = color_text), size = 3) +
-  scale_x_discrete(expand = c(0, 0)) +
+  scale_x_discrete(expand = c(0, 0), 
+                   labels = c("BF\nn = 54",
+                              "CAA\nn = 889",
+                              "BB\nn = 211",
+                              "DS\nn = 21",
+                              "EAO\nn = 464")) +
   scale_y_discrete(labels = c("Twohorn sculpin",
                               "Atlantic wolffish",
                               "Greenland halibut",
@@ -844,8 +951,8 @@ trawl_area <- trawl %>%
                               "Polar cod"),
                    expand = c(0, 0)) +
   scale_colour_identity() +
-  scale_fill_viridis_c("Relative\nabundance (%)  ", option = "rocket", 
-                       breaks = seq(0, 100, 20), limits = c(0, 100), 
+  scale_fill_viridis_c("Relative\nabundance (%)  ", option = "magma",
+                       breaks = seq(0, 100, 20), limits = c(0, 100),
                        direction = -1) +
   guides(fill = guide_colorbar(label.position = "top")) +
   theme(axis.title = element_blank(),
@@ -853,30 +960,52 @@ trawl_area <- trawl %>%
         legend.title = element_text(vjust = 0),
         legend.title.align = 0.5,
         legend.key.height = unit(0.1, "in"),
-        legend.key.width = unit(0.3, "in"),
-        legend.box.margin = margin(0,0,-5,0))
+        legend.key.width = unit(0.25, "in"),
+        legend.box.margin = margin(0,0,-5,0),
+        plot.margin = unit(c(0, 0.1, 0.01, 0), "in"))
+
+# Map relative abundance
+map_RA <- trawl_station_df %>%
+  ggplot() +
+  # Bathymetry
+  geom_raster(data = bathy_laea,
+              aes(x = xc, y = yc, fill = depth_d)) + 
+  scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
+  guides(fill = "none") +
+  new_scale_fill() +
+  # Coastlines
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), 
+               fill = "grey20") + 
+  # Abundance
+  geom_scatterpie(data = trawl_station_df, aes(x = xc_jit,  y = yc_jit),
+                  cols = c("Arctic cod", 
+                           "Snailfish",
+                           "Lanternfish",
+                           "Redfish",
+                           "Other"),
+                  alpha = 0.9, pie_scale = 1.5, legend_name = "Species", colour = NA) +
+  # geom_text(aes(x = xc_jit, y = yc_jit, label = row), size = 8, col = "green") +
+  scale_fill_manual(values = met.brewer("Johnson", n = 5, direction = -1)) +
+  coord_fixed(xlim = c(-2450, 600), ylim = c(-1500, 1800), expand = F) +
+  # Legend over 2 rows
+  guides(fill = guide_legend(nrow = 2, byrow = T)) +
+  theme(legend.position = "top", 
+        legend.title = element_blank(),
+        legend.key.height = unit(0.1, "in"), 
+        legend.key.width = unit(0.1, "in"), 
+        axis.text = element_blank(),
+        axis.ticks = element_blank(),
+        axis.title = element_blank(),
+        plot.margin = unit(c(0.01, 0, 0.29, 0), "in"))
+
+# Combine plots
+table1_RA <- plot_grid(heatmap_RA, map_RA, ncol = 2, rel_widths = c(1, 0.7))
 # Save and display plot
-ggsave("plots/Table1_relative_abundance_IHO.png", trawl_area, 
-       height = 3.5, width = 5, dpi = 600, units = "in")
-trawl_area
+ggsave("plots/Table1_RA_map.png", table1_RA, 
+       height = 3.25, width = 6.5, dpi = 600, units = "in")
+table1_RA
 ```
 
-### Map trawl locations
-
-```{r}
-
-```
-
-## Figure 4. Latitude mesopelagic backscatter
-
-```{r scatterplot-lat-sa}
-# lat_SA <- 
-lm <- 
-  SA_grid_laea %>%
-  ggplot() + 
-  geom_point(aes(x = lat, y = SA_int)) +
-  geom_smooth(aes(x = lat, y = SA_int), method = "lm")
-```
 
 # Supplementary data
 
