--- a/PanArctic_DSL_figures.Rmd
+++ b/PanArctic_DSL_figures.Rmd
@@ -1037,6 +1037,66 @@ ggsave("plots/Figure_LM_SA_lat.png", lm_SA_lat,
 lm_SA_lat
 ```
 
+## Figure 5. HGAM
+
+```{r HGAM-plot}
+# GAM velocity
+GAMSAI_velo <- predSA_I %>%
+  filter(var == "v") %>%
+  ggplot() +
+  geom_line(aes(x = v, y = SA_fit, col = IHO), size = 0.6) +
+  geom_ribbon(aes(x = v, ymin = SA_lwr_ci, ymax = SA_upr_ci, fill = IHO), 
+              alpha = 0.05) +
+  scale_colour_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
+  scale_fill_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
+  coord_cartesian(xlim = c(0, 4), ylim = c(0, 40)) +
+  scale_x_continuous(breaks = seq(0, 10, 1)) +
+  labs(x = expression("Mean velocity at 318 m (cm s"^-1*")"),
+       y = expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) +
+  theme(panel.border = element_blank(),
+        axis.line = element_line(),
+        legend.title = element_blank(), 
+        legend.position = "none")
+
+# GAM chlorophyll
+GAMSAI_chl <- predSA_I %>%
+  mutate(IHO = as.character(IHO),
+         IHO = factor(if_else(IHO == "WAO_BF", "WAO & BF", IHO),
+                      levels = c("WAO & BF", "CAA", "BB", "DS", "EAO"))) %>%
+  filter(var == "chl") %>%
+  ggplot() +
+  geom_line(aes(x = chl, y = SA_fit, col = IHO), size = 0.6) +
+  geom_ribbon(aes(x = chl, ymin = SA_lwr_ci, ymax = SA_upr_ci, fill = IHO),
+              alpha = 0.05) +
+  scale_colour_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
+  scale_fill_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
+  coord_cartesian(xlim = c(0, 2.1), ylim = c(0, 40), expand = T) +
+  scale_x_continuous(breaks = seq(0, 10, 0.5)) +
+  labs(x = expression("Mean chlorophyll (mg m"^-3*")"),
+       y = expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) +
+  theme(panel.border = element_blank(),
+        legend.key.height = unit(0.15, "in"), 
+        legend.key.width = unit(0.15, "in"), 
+        axis.line = element_line(),
+        legend.title = element_blank(), 
+        legend.position = "none")
+
+# Legend for plots
+legend <- get_legend(GAMSAI_chl + 
+  guides(colour = guide_legend(nrow = 1, byrow = T)) +
+  theme(legend.position = "top"))
+
+# Combine plots
+HGAM <- plot_grid(legend, 
+                  plot_grid(GAMSAI_velo, GAMSAI_chl, ncol = 2, labels = "auto", label_size = 9),
+                  ncol = 1, rel_heights = c(0.2, 1))
+# Save and display plot
+ggsave("plots/Figure_HGAM_SAI3.png", HGAM, 
+       height = 2.5, width = 6.5, dpi = 600, units = "in")
+HGAM
+```
+
+
 # Supplementary data
 
 ## OLD Figure 3. Map of mesopelagic backscatter hotspots
